# tech-news-multiagent

./: .env.example  .gitignore  README.md  pyproject.toml
config/: not_working.json  rss_sources.json
docs/: SOFTWARE_FLOW.md
plans/: news-collector-report-generator-plan.md  rss-feed-enhancement-plan.md
scripts/: browser_36kr.py  migrate_db_schema.py
src/: __init__.py  cli.py  main.py
src/agents/: __init__.py  base.py  development_tracker.py  memory_manager.py  news_collector.py  report_generator.py  technology_analyzer.py
src/config/: __init__.py  defaults.py  llm_config.py  rss_config.py
src/memory/: __init__.py  vector_store.py
src/models/: schemas.py
src/storage/: __init__.py  sqlite_store.py
src/utils/: __init__.py  content_extractor.py  entity_extractor.py  failure_logger.py  llm_analyzer.py  rss_fetcher.py
tests/: test_agents.py  test_new_features.py
