[project]
name = "tech-news-multiagent"
version = "0.1.0"
description = "Multi-agent system for tech news analysis and technology tracking"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "chromadb>=0.5.0",
    "pydantic>=2.0.0",
    "requests>=2.32.0",
    "chardet>=3.0.2,<6.0.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "asyncio>=3.4.3",
    "aiohttp>=3.9.0",
    "sentence-transformers>=2.7.0",
    "newspaper3k>=0.2.8",
    "trafilatura>=1.6.0",
    "readability-lxml>=0.8.1",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
tech-analyzer = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
